--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,17 +10,31 @@
 
   --blue-50: rgba(0, 214, 243, 75);
   --blue-100: #0BACC6;
+  --blue-120: #0074C7;
   --blue-150: #005593;
   --blue-450: #003A63;
+  --blue-500: #083F66;
+  --blue-550: #003860;
 
 
   --gray-600: rgba(255, 255, 255, 0.1);
+  --gray-100: #555555;
 
   --red-200: #EB6A5E;
+  --red-800: rgba(237, 41, 57);
+  --red-1000: #BF2A2A;
+  --red-800-transparent: rgba(237, 41, 57, .2);
+
   --yellow-200: #F3BD50;
+
+  --green-100: #22D27E;
   --green-200: #65C255;
+  --green-700: rgba(34, 210, 126);
+  --green-700-transparent: rgba(34, 210, 126, .3);
 
   --white: #ffffff;
+  --white-50: #FAFAFA;
+
   --black: #000000;
 }
 
