--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -29,6 +29,7 @@
             font-weight: 600;
             font-size: 30px;
             margin-top: 0.5rem;
+            color: var(--white);
         }
 
         select{
@@ -177,6 +178,7 @@
             font-weight: 600;
             font-size: 30px;
             margin-top: 0.5rem;
+            color: var(--white);
         }
 
         select{
