--- a/src/components/Main/GameScrollList/index.module.scss
+++ b/src/components/Main/GameScrollList/index.module.scss
@@ -17,6 +17,7 @@
             font-weight: 400;
             font-size: 20px;
             line-height: 24px;
+            color: var(--white);
         }
 
         a{
@@ -113,6 +114,7 @@
     
                 strong{
                     margin-top: 1rem;
+                    color: var(--white);
                 }
 
                 p{
