--- a/src/components/ApresentationHome/apresentation.module.scss
+++ b/src/components/ApresentationHome/apresentation.module.scss
@@ -9,10 +9,12 @@
         font-size: 30px;
         font-weight: 500;
         line-height: 48px;
+        color: var(--white);
 
         strong{
             font-size: 50px;
             font-weight: 600;
+            color: var(--white);
         }
     }
 
