--- a/src/components/BannerApresentation/TableHorizontal/index.module.scss
+++ b/src/components/BannerApresentation/TableHorizontal/index.module.scss
@@ -15,6 +15,7 @@
         p{
             font-size: 18px;
             font-weight: 600;
+            color: var(--white);
 
             margin-right: 1.2rem;
         }
@@ -22,6 +23,7 @@
 
     .content{
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
 
