--- a/src/components/BannerApresentation/TableVertical/index.module.scss
+++ b/src/components/BannerApresentation/TableVertical/index.module.scss
@@ -16,6 +16,7 @@
 
         font-weight: 500;
         font-size: 25px;
+        color: var(--white);
     }
 
     .content{
@@ -103,6 +104,7 @@
             position: absolute;
             top: 45rem;
             left: 85rem;
+            object-fit: cover;
         }
 
         div{
@@ -121,6 +123,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                color: var(--white);
 
                 background: rgba(16, 16, 16, 0.2);
             }
