--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -21,6 +21,7 @@
             margin-top: 0.5rem;
             font-weight: 300;
             margin-left: 1rem;
+            color: var(--white);
             strong{
                 font-weight: 500;
             }
@@ -79,6 +80,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                color: var(--white);
 
                 background-color: var(--white);
                 color: black;
