--- a/src/components/Main/GameScrollList/index.module.scss
+++ b/src/components/Main/GameScrollList/index.module.scss
@@ -40,6 +40,7 @@
 
         .box{
             width: 100%;
+            max-width: 270.70px;
             height: 100%;
             display: flex;
             flex-direction: column;
