--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -11,6 +11,7 @@
         padding: 2rem 6.93rem;
 
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
 
         background: rgba(5,98,130, .6);
@@ -173,6 +174,99 @@
                 border-radius: 10px;
 
                 background: rgba(0, 75, 129, 0.6);
+
+                .games{
+                    width: 100%;
+                    height: 100%;
+                    padding: 2rem 0;
+
+                    header{
+                        width: 20rem;
+                        height: 60px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-start;
+
+                        img{
+                            width: 98px;
+                            height: 98px;
+                            z-index: 2;
+
+                            object-fit: contain;
+                        }
+
+                        div{
+                            width: 100%;
+                            height: 100%;
+                            position: relative;
+                            right: 1rem;
+                            background: linear-gradient(90deg, #014474 50.13%, rgba(9, 86, 114, 0) 99.51%);
+                        }
+
+                        p{
+                            margin-top: 1.1rem;
+                            font-size: 17px;
+                            font-weight: bold;
+                            font-style: italic;
+                            margin-left: 2rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    footer{
+        padding: 2rem 6.9rem;
+    }
+
+    .footer{
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        padding: 2rem 6.93rem;
+
+        background-color: var(--blue-550);
+
+        p{
+            margin-top: 0.8rem;
+        }
+
+        div{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            p{
+                & + p{
+                    margin-left: 1rem;
+                }
+            }
+
+            div{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                label{
+                    width: 25px;
+                    height: 25px;
+                    border-radius: 15px;
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    cursor: pointer;
+
+                    margin-left: 1rem;
+
+                    background-color: var(--white);
+                }
             }
         }
     }
