--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,7 @@
   --blue-450: #003A63;
   --blue-500: #083F66;
   --blue-550: #003860;
+  --blue-900: #003256;
 
 
   --gray-600: rgba(255, 255, 255, 0.1);
@@ -26,6 +27,7 @@
   --red-800-transparent: rgba(237, 41, 57, .2);
 
   --yellow-200: #F3BD50;
+  --yellow-300: #DBDF21;
 
   --green-100: #22D27E;
   --green-200: #65C255;
