--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -30,8 +30,10 @@
             }
 
             p{
-                margin-top: 0.7rem;
+                margin-top: 1em;
                 margin-left: 1rem;
+                font-size: 20px;
+                font-weight: 300;
             }
         }
 
