--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -22,6 +22,7 @@
             font-weight: 300;
             margin-left: 1rem;
             color: var(--white);
+            font-size: 17px;
             strong{
                 font-weight: 500;
             }
