--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -99,7 +99,7 @@
                 display: flex;
                 align-items: center;
 
-                margin: 0 2rem;
+                margin: 0 1rem;
 
                 img{
                     width: 36px;
@@ -108,6 +108,7 @@
 
                 p{
                     margin-top: 0.7rem;
+                    font-weight: bold;
                 }
             }
 
@@ -120,8 +121,8 @@
                 justify-content: flex-end;
 
                 label{
-                    width: 46px;
-                    height: 46px;
+                    width: 34px;
+                    height: 34px;
 
                     cursor: pointer;
 
@@ -135,7 +136,7 @@
                     border-radius: 5px;
 
                     & + label{
-                        margin-left: 0.6rem;
+                        margin-left: 0.1rem;
                     }
 
                     transition: filter 0.2s;
