--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,16 +7,29 @@
 :root {
   --background-darkmode: #003256;
   --background: #EFF1FE;
+  --background-demo-home: rgba(16, 16, 16, 0.2);
+  --background-header-secondary: var(--blue-550);
+  --background-button-icon: var(--blue-500);
+  --background-footer-1: transparent;
+  --background-footer-2: var(--blue-550);
+  --background-box-game: var(--blue-900);
+  --background-button-calculator: #003A63;
+  --background-viewer-index-tipster: var(--white);
+
+  --background-hover: rgba(0, 50, 86, 0.4);
 
   --blue-50: rgba(0, 214, 243, 75);
   --blue-100: #0BACC6;
   --blue-120: #0074C7;
+  --blue-140: #4479FF;
   --blue-150: #005593;
+  --blue-200: #2865FF;
   --blue-450: #003A63;
   --blue-500: #083F66;
   --blue-550: #003860;
   --blue-900: #003256;
 
+  --background-header: #002b49;
 
   --gray-600: rgba(255, 255, 255, 0.1);
   --gray-100: #555555;
@@ -37,7 +50,45 @@
   --white: #ffffff;
   --white-50: #FAFAFA;
 
+  --btn-login: #003A63;
+
   --black: #000000;
+
+  --button-color-gear: #ffffff;
+  --light-100: #ffffff;
+  --light: #ffffff;
+  --light_select: var(--white);
+  --dark: #000000;
+}
+
+.dark-mode:root{
+  --background-darkmode: #EFF1FE;
+  --background-header: #2865FF;
+  --background-demo-home: rgba(37, 80, 255, 0.5);
+  --background-button-icon: rgba(227, 227, 227, 0.5);
+  --background-footer-1: var(--blue-200);
+  --background-footer-2: var(--blue-140);
+  --background-box-game: #EFF1FE;
+  --background-button-calculator: #2865FF;
+  --background-viewer-index-tipster: #EFF1FE;
+
+  --background-hover: #EFF1FE;
+
+  --background-header-secondary: var(--white);
+  --btn-login: #2865FF;
+
+  --red-800-transparent: rgba(237, 41, 57);
+  --green-700-transparent: rgba(34, 210, 126);
+
+  --button-color-gear: #808080;
+  --dark: #ffffff;
+  --light-100: #555555;
+  --light: #3A3A3A;
+  --light_select: #3A3A3A;
+}
+
+.ecram:root{
+  --light_select: var(--white);
 }
 
 @media (max-width: 1080px){
@@ -60,17 +111,25 @@ body {
 
 body, input, textarea, select, button {
   font: 400 1rem "Montserrot", sans-serif;
+
+  transition: background 1s, color 1s;
 }
 
 h1, h2, h3, h4, h5, h6, p, label{
   color: var(--white);
+
+  transition: color 1s;
 }
 
 button {
   cursor: pointer;
+
+  transition: background 1s, color 1s;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+
+  transition: color 1s;
 }
