--- a/src/components/BannerApresentation/banner.module.scss
+++ b/src/components/BannerApresentation/banner.module.scss
@@ -4,7 +4,6 @@
     border-radius: 20px;
     margin-top: 50px;
 
-    background: linear-gradient(180deg, rgba(196, 196, 196, 0.5) 0%, rgba(196, 196, 196, 0.1) 100%);
     padding: 1rem 2rem;
 
     transition: width 0.2s, padding 0.2s;
@@ -96,7 +95,7 @@
                     cursor: pointer;
 
                     background-color: transparent;
-                    border: 1px solid rgba(255, 255, 255, .5);
+                    border: 1px solid var(--light);
                 }
 
                 input:checked{
