--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -10,14 +10,14 @@
 
     z-index: 3;
 
-    background-color: var(--blue-550);
+    background-color: var(--background-header-secondary);
 
     .cardBox{
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: space-between;
         .box{
             height: 100%;
             display: flex;
@@ -28,10 +28,12 @@
             cursor: pointer;
 
             p{
-                margin-top: 0.75rem;
-                margin-left: 0.3rem;
+                margin-top: 1.1rem;
+                margin-left: 0.5rem;
                 font-size: 16px;
                 line-height: 19.5px;
+
+                color: var(--light)
             }
 
             img{
@@ -57,8 +59,8 @@
         justify-content: space-between;
 
         img{
-            width: 23px;
-            height: 23px;
+            width: 19px;
+            height: 19px;
             object-fit: contain;
 
             cursor: pointer;
@@ -69,11 +71,11 @@
         .ant-select-selector{
             background-color: transparent !important;
             border: none !important;
-            color: var(--white);
+            color: var(--light);
             padding: 0 1rem;
         }
         .ant-select-arrow{
-            color: var(--white);
+            color: var(--light);
         }
     }
 
