--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -16,7 +16,7 @@
 
         margin-top: 2rem;
 
-        border-bottom: 1px solid var(--white);
+        border-bottom: 1px solid var(--light);
 
         div{
             display: flex;
@@ -56,7 +56,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: var(--blue-900);
+            background-color: var(--background-box-game);
 
             padding: 1rem 2rem;
 
@@ -65,7 +65,7 @@
 
             :global{
                 .ant-progress-text{
-                    color: var(--white);
+                    color: var(--light);
                 }
             }
 
