--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -2,20 +2,17 @@
     width: 100%;
     height: 100%;
 
-    background: #003256;
+    background: var(--background-darkmode);
 
     .content{
         width: 100%;
         height: 100%;
 
-        padding: 2rem 6.93rem;
+        padding: 2rem 2.93rem;
 
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-
-        background: rgba(5,98,130, .6);
-        background: linear-gradient(0deg, rgba(5,98,130,.5) 0%, rgba(24,148,235,0.5) 100%);
 
         .left{
             flex: 1;
@@ -27,8 +24,10 @@
                 justify-content: center;
                 align-items: center;
 
-                background-color: var(--blue-150);
-                border: 2px solid var(--blue-120);
+                background-color: var(--background-button-calculator);
+                border: 1px solid var(--blue-120);
+
+                box-shadow: inset 0px 0px 40px rgba(0, 31, 53, 0.5);
 
                 border-radius: 10px;
 
@@ -69,9 +68,6 @@
                     align-items: center;
                     border-radius: 7px;
 
-                    background: linear-gradient(149.43deg, rgba(0, 43, 73, 0.8) 20.12%, rgba(0, 149, 255, 0.1) 98.85%);
-                    border: 1px solid rgba(255, 255, 255, .15);
-
                     button{
                         height: 100%;
                         display: flex;
@@ -81,7 +77,7 @@
 
                         padding: 0 2rem;
                         p{
-                            margin-top: 1.45rem;
+                            margin-top: 1.65rem;
                             font-size: 16px;
                             font-weight: 400;
                         }
@@ -91,7 +87,7 @@
                             height: 10px;
                             border-radius: 5px 5px 0 0;
 
-                            background-color: var(--white);
+                            background-color: var(--light);
                         }
 
                         transition: background-color 0.2s;
@@ -109,7 +105,7 @@
                         align-items: center;
                         justify-content: center;
 
-                        background-color: var(--blue-500);
+                        background-color: var(--background-button-icon);
 
                         cursor: pointer;
                         transition: filter 0.2s;
@@ -132,9 +128,6 @@
                     align-items: center;
                     justify-content: center;
 
-                    background: linear-gradient(149.43deg, rgba(0, 43, 73, 0.8) 20.12%, rgba(0, 149, 255, 0.1) 98.85%);
-                    border: 1px solid rgba(255, 255, 255, .15);
-
                     label{
                         width: 30px;
                         height: 30px;
@@ -145,7 +138,7 @@
                         border-radius: 5px;
                         justify-content: center;
 
-                        background-color: var(--blue-500);
+                        background-color: var(--background-button-icon);
 
                         cursor: pointer;
                         transition: filter 0.2s;
@@ -161,7 +154,7 @@
                         font-weight: 500;
                         font-size: 17px;
                         margin-left: 1.1rem;
-                        // padding: 0 0.5rem;
+                        padding: 0 0.5rem;
                     }
                 }
             }
@@ -173,7 +166,6 @@
                 padding: 2rem;
                 border-radius: 10px;
 
-                background: rgba(0, 75, 129, 0.6);
 
                 .games{
                     width: 100%;
@@ -200,7 +192,6 @@
                             height: 100%;
                             position: relative;
                             right: 1rem;
-                            background: linear-gradient(90deg, #014474 50.13%, rgba(9, 86, 114, 0) 99.51%);
                         }
 
                         p{
@@ -230,7 +221,7 @@
 
         padding: 2rem 6.93rem;
 
-        background-color: var(--blue-550);
+        background-color: var(--background-footer-2);
 
         p{
             margin-top: 0.8rem;
