--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,20 @@
+:global(.dark-mode){
+  .container{
+    width: 100%;
+    height: 100%;
+  
+    background-image: url('/images/background_dark.png');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    transition: background-image 0.2s;
+
+    @media (max-width: 720px){
+      background-image: url('/images/background_mobile.png');
+    }
+  }
+}
+
 .container{
   width: 100%;
   height: 100%;
@@ -26,7 +43,7 @@
   .content{
     width: 100%;
     height: 100%;
-    padding: 50px 111px;
+    padding: 50px 50px;
 
     display: flex;
     justify-content: space-between;
