--- a/src/components/ApresentationHome/apresentation.module.scss
+++ b/src/components/ApresentationHome/apresentation.module.scss
@@ -4,6 +4,19 @@
 
     margin-top: calc(228px - 80px);
 
+    @media (max-width: 1200px){
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+
+        margin-top: calc(128px - 80px);
+    }
+
+    div:first-child{
+        margin: 0 2rem;
+    }
+
     .title{
         width: 100%;
         font-size: 30px;
@@ -53,6 +66,10 @@
             margin-left: 1rem;
             font-family: 500;
         }
+
+        @media (max-width: 1200px){
+            display: none;
+        }
     }
 
     .links{
@@ -69,6 +86,12 @@
             transition: transform 0.2s;
             &:hover{
                 transform: scale(1.04);
+            }
+        }
+
+        img{
+            @media (max-width: 1200px){
+                display: none;
             }
         }
 
