--- a/src/components/BannerApresentation/TableHorizontal/index.module.scss
+++ b/src/components/BannerApresentation/TableHorizontal/index.module.scss
@@ -19,6 +19,10 @@
 
             margin-right: 1.2rem;
         }
+
+        @media (max-width: 534px){
+            margin-top: 2rem;
+        }
     }
 
     .content{
