--- a/src/components/BannerApresentation/TableVertical/index.module.scss
+++ b/src/components/BannerApresentation/TableVertical/index.module.scss
@@ -17,6 +17,16 @@
         font-weight: 500;
         font-size: 25px;
         color: var(--white);
+
+        @media (max-width: 1200px){
+            margin-top: 2rem;
+        }
+    }
+
+    .wrapper{
+        @media (max-width: 800px){
+            flex-direction: column;
+        }
     }
 
     .content{
@@ -36,6 +46,10 @@
             border-radius: 15px;
 
             background: rgba(16, 16, 16, 0.2);
+
+            @media (max-width: 800px){
+                width: 100%;
+            }
 
             header{
                 width: 100%;
@@ -90,12 +104,17 @@
     }
 
     .contentCut{
-        width: 100%;
+        width: 5rem;
         height: 12rem;
         display: flex;
         justify-content: space-around;
 
         flex: 3;
+
+        @media (max-width: 800px){
+            width: 100%;
+            justify-content: space-between;
+        }
 
         img{
             width: 30px;
@@ -114,6 +133,13 @@
             border-radius: 5px;
 
             margin-left: 0.5rem;
+
+            @media (max-width: 800px){
+                width: 100%;
+                height: 10rem;
+                margin-left: 0rem;
+                margin-top: 1rem;
+            }
 
             header{
                 width: 100%;
@@ -142,6 +168,12 @@
 
             &:active{
                 background: rgba(34, 210, 126, 1);
+            }
+
+            @media (max-width: 800px){
+                & + div{
+                    margin-left: 1rem;
+                }
             }
         }
 
