--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -12,60 +12,71 @@
 
     background-color: var(--background-header-secondary);
 
-    .cardBox{
+    .content{
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        .box{
+
+        @media (max-width: 1200px){
+            display: none;
+        }
+        .cardBox{
+            width: 100%;
             height: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            flex-direction: row;
-
-            cursor: pointer;
-
-            p{
-                margin-top: 1.1rem;
-                margin-left: 0.5rem;
-                font-size: 16px;
-                line-height: 19.5px;
-
-                color: var(--light)
-            }
-
-            img{
-                transition: transform 0.2s;
-            }
-
-            &:hover{
+            .box{
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                flex-direction: row;
+    
+                cursor: pointer;
+    
+                p{
+                    margin-top: 1.1rem;
+                    margin-left: 0.5rem;
+                    font-size: 16px;
+                    line-height: 19.5px;
+    
+                    color: var(--light)
+                }
+    
                 img{
-                    transform: scale(1.1);
+                    transition: transform 0.2s;
+                }
+    
+                &:hover{
+                    img{
+                        transform: scale(1.1);
+                    }
+                }
+    
+                & + div{
+                    margin-left: 3rem;
                 }
             }
-
-            & + div{
-                margin-left: 3rem;
+        }
+    
+        .options{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+    
+            img{
+                width: 19px;
+                height: 19px;
+                object-fit: contain;
+    
+                cursor: pointer;
             }
         }
     }
 
-    .options{
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        img{
-            width: 19px;
-            height: 19px;
-            object-fit: contain;
-
-            cursor: pointer;
-        }
-    }
 
     :global{
         .ant-select-selector{
