--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -7,6 +7,10 @@
 
     border-radius: 10px;
 
+    @media (max-width: 1200px){
+        display: none;
+    }
+
     header{
         width: 100%;
         display: flex;
