--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -17,6 +17,9 @@
         .left{
             flex: 1;
             height: 100%;
+            @media (max-width: 1200px){
+                display: none;
+            }
             .calculator{
                 width: 100%;
                 height: 66px;
@@ -93,7 +96,7 @@
                         transition: background-color 0.2s;
 
                         &:hover{
-                            background-color: var(--blue-500);
+                            background-color: var(--background-header);
                         }
                     }
 
