--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,7 @@
   --background-box-game: var(--blue-900);
   --background-button-calculator: #003A63;
   --background-viewer-index-tipster: var(--white);
+  --background-button-mobile: #082A3C;
 
   --background-hover: rgba(0, 50, 86, 0.4);
 
@@ -58,6 +59,7 @@
   --light-100: #ffffff;
   --light: #ffffff;
   --light_select: var(--white);
+  --light_select-arrow: var(--white);
   --dark: #000000;
 }
 
@@ -71,6 +73,7 @@
   --background-box-game: #EFF1FE;
   --background-button-calculator: #2865FF;
   --background-viewer-index-tipster: #EFF1FE;
+  --background-button-mobile: #4071EC;
 
   --background-hover: #EFF1FE;
 
@@ -85,10 +88,12 @@
   --light-100: #555555;
   --light: #3A3A3A;
   --light_select: #3A3A3A;
+  --light_select-arrow: #2865FF;
 }
 
 .ecram:root{
   --light_select: var(--white);
+  --light_select-arrow: var(--white);
 }
 
 @media (max-width: 1080px){
@@ -99,7 +104,7 @@
 
 @media (max-width: 720px){
   html {
-    font-size: 87.5%;
+    font-size: 80.5%;
   }
 }
 
