--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,6 +17,7 @@
   --background-viewer-index-tipster: var(--white);
   --background-button-mobile: #082A3C;
 
+  --background-line-header: var(--white); 
   --background-hover: rgba(0, 50, 86, 0.4);
 
   --blue-50: rgba(0, 214, 243, 75);
@@ -75,6 +76,7 @@
   --background-viewer-index-tipster: #EFF1FE;
   --background-button-mobile: #4071EC;
 
+  --background-line-header: rgba(220, 220, 220, 0.6); 
   --background-hover: #EFF1FE;
 
   --background-header-secondary: var(--white);
