--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -3,7 +3,16 @@
     height: 70px;
     display: flex;
     align-items: center;
-    padding: 0 6.93rem;
+    padding: 0 3.93rem;
+
+    @media (max-width: 920px){
+        padding: 0 10px;
+    }
+
+    
+    @media (max-width: 480px){
+        padding: 0 2px;
+    }
 
     position: sticky;
     top: 70px;
@@ -73,6 +82,57 @@
                 object-fit: contain;
     
                 cursor: pointer;
+            }
+        }
+    }
+
+    .contentMobile{
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        @media (min-width: 1200px){
+            display: none;
+        }
+
+        .contentBox{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            padding: 1rem 0;
+
+            div{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+
+                cursor: pointer;
+
+                margin-top: 1rem;
+
+                img{
+                    margin-bottom: 0.4rem;
+                }
+
+                p{
+                    color: var(--light);
+                }
+            }
+
+            label{
+                width: 1px;
+                height: 100%;
+                align-self: flex-end;
+
+                background-color: var(--background-line-header);
             }
         }
     }
