--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -163,6 +163,10 @@
             font-weight: 600;
             font-size: 25px;
             margin-top: 0.8rem;
+
+            @media (max-width: 600px){
+                font-size: 16px;
+            }
         }
 
         img{
