--- a/src/components/Main/GameScrollList/index.module.scss
+++ b/src/components/Main/GameScrollList/index.module.scss
@@ -36,6 +36,7 @@
         width: 100%;
         height: 100%;
         display: flex;
+        justify-content: center;
         align-items: center;
 
         .box{
