--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -8,7 +8,11 @@
         width: 100%;
         height: 100%;
 
-        padding: 2rem 2.93rem;
+        padding: 2rem 1.93rem;
+
+        @media (max-width: 800px){
+            padding: 2rem 0;
+        }
 
         display: flex;
         flex-direction: column;
@@ -52,9 +56,14 @@
             }
         }
         .right{
+            width: 100%;
             flex: 5;
             height: 100%;
             padding: 1rem 2rem;
+
+            @media (max-width: 600px){
+                padding: 1rem 0.5rem;
+            }
 
             header{
                 width: 100%;
@@ -62,104 +71,130 @@
                 display: flex;
                 justify-content: center;
 
-                .headerGame{
+                .header{
                     width: 100%;
-                    height: 70px;
-                    flex: 4;
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    border-radius: 7px;
+                    height: 100%;
 
-                    button{
-                        height: 100%;
-                        display: flex;
+                    display: flex;
+
+                    @media (max-width: 1200px){
                         flex-direction: column;
-                        background-color: transparent;
-                        border: none;
-
-                        padding: 0 2rem;
-                        p{
-                            margin-top: 1.65rem;
-                            font-size: 16px;
-                            font-weight: 400;
-                        }
-
-                        div{
-                            width: 100%;
-                            height: 10px;
-                            border-radius: 5px 5px 0 0;
-
-                            background-color: var(--light);
-                        }
-
-                        transition: background-color 0.2s;
-
-                        &:hover{
-                            background-color: var(--background-header);
-                        }
                     }
-
-                    label{
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 5px;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-
-                        background-color: var(--background-button-icon);
-
-                        cursor: pointer;
-                        transition: filter 0.2s;
-
-                        &:hover{
-                            filter: brightness(0.8);
-                        }
-                    }
-                }
-
-                .date{
-                    width: 100%;
-                    height: 70px;
-                    flex: 1;
-                    margin-left: 2rem;
-                    border-radius: 7px;
-                    padding: 0 0.5rem;
-
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    label{
-                        width: 30px;
-                        height: 30px;
-
-                        display: flex;
-                        align-items: center;
-
-                        border-radius: 5px;
-                        justify-content: center;
-
-                        background-color: var(--background-button-icon);
-
-                        cursor: pointer;
-                        transition: filter 0.2s;
-
-                        &:hover{
-                            filter: brightness(0.8);
-                        }
-                    }
-
-                    p{
+                    .headerGame{
                         width: 100%;
-                        margin-top: 0.8rem;
-                        font-weight: 500;
-                        font-size: 17px;
-                        margin-left: 1.1rem;
+                        height: 70px;
+                        flex: 4;
+                        display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+                        border-radius: 7px;
+    
+                        button{
+                            height: 100%;
+                            display: flex;
+                            flex-direction: column;
+                            background-color: transparent;
+                            border: none;
+
+                            p{
+                                margin-top: 1.25rem;
+                                font-size: 16px;
+                                font-weight: 400;
+                            }
+    
+                            div{
+                                width: 100%;
+                                height: 10px;
+                                border-radius: 5px 5px 0 0;
+    
+                                background-color: var(--light);
+                            }
+    
+                            transition: background-color 0.2s;
+    
+                            &:hover{
+                                background-color: var(--background-header);
+                            }
+                        }
+    
+                        img{
+                            cursor: pointer;
+                            transition: filter 0.2s;
+                            &:hover{
+                                filter: brightness(0.8);
+                            }
+                        }
+    
+                        label{
+                            width: 30px;
+                            height: 30px;
+                            border-radius: 5px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+    
+                            background-color: var(--background-button-icon);
+    
+                            cursor: pointer;
+                            transition: filter 0.2s;
+    
+                            &:hover{
+                                filter: brightness(0.8);
+                            }
+                        }
+                    }
+    
+                    .date{
+                        width: 100%;
+                        height: 70px;
+                        flex: 1;
+                        margin-left: 2rem;
+                        border-radius: 7px;
                         padding: 0 0.5rem;
+    
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+    
+                        @media (max-width: 1200px){
+                            margin-left: 0rem;
+                            margin-top: 1rem;
+                        }
+    
+                        label{
+                            width: 30px;
+                            height: 30px;
+    
+                            display: flex;
+                            align-items: center;
+    
+                            border-radius: 5px;
+                            justify-content: center;
+    
+                            background-color: var(--background-button-icon);
+    
+                            cursor: pointer;
+                            transition: filter 0.2s;
+    
+                            &:hover{
+                                filter: brightness(0.8);
+                            }
+                        }
+    
+                        p{
+                            width: 100%;
+                            margin-top: 0.8rem;
+                            font-weight: 500;
+                            font-size: 17px;
+                            text-align: center;
+    
+                            @media (max-width: 1200px){
+                                margin-top: 1.1rem;
+                            }
+                        }
                     }
                 }
+
             }
             main{
                 width: 100%;
@@ -168,7 +203,6 @@
                 margin: 2rem 0;
                 padding: 2rem;
                 border-radius: 10px;
-
 
                 .games{
                     width: 100%;
@@ -212,6 +246,10 @@
 
     footer{
         padding: 2rem 6.9rem;
+
+        @media (max-width: 1200px){
+            padding: 2rem 1.9rem;
+        }
     }
 
     .footer{
@@ -224,13 +262,23 @@
 
         padding: 2rem 6.93rem;
 
+        @media (max-width: 1200px){
+            padding: 2rem 1.9rem;
+        }
+
         background-color: var(--background-footer-2);
+
+        @media (max-width: 848px){
+            display: none;
+        }
 
         p{
             margin-top: 0.8rem;
         }
 
         div{
+            width: 100%;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -262,6 +310,76 @@
                     background-color: var(--white);
                 }
             }
+        }
+    }
+
+    .footerMobile{
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        padding: 2rem 6.93rem;
+        background-color: var(--background-footer-2);
+
+        @media (max-width: 1200px){
+            padding: 2rem 1.93rem;
+        }
+
+
+        @media (min-width: 848px){
+            display: none;
+        }
+        @media (max-width: 848px){
+            padding: 2rem 1.93rem;
+        }
+
+        div:first-child{
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            div{
+                width: 100%;
+                height: 100%;
+    
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
+        }
+
+        div:nth-child(2){
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            label{
+                width: 25px;
+                height: 25px;
+                border-radius: 15px;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                cursor: pointer;
+
+                margin-left: 1rem;
+
+                background-color: var(--white);
+            }
+        }
+
+        p:last-child{
+            margin-top: 1rem;
         }
     }
 }
