--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -105,6 +105,10 @@
       align-items: center;
       justify-content: flex-start;
 
+      @media (max-width: 600px){
+        flex-direction: column;
+      }
+
       a{
           cursor: pointer;
           & + a{
@@ -115,6 +119,14 @@
           &:hover{
               transform: scale(1.04);
           }
+      }
+
+      a{
+        @media (max-width: 600px){
+          & + a{
+            margin-top: 1rem;
+          }
+        }
       }
 
       img:nth-child(3){
