fix: fixing errors scss

--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -141,6 +141,8 @@
                 border: none;
                 outline: none;
 
+                background-color: var(--white-50);
+
                 color: var(--black);
             }
         }
