--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -112,10 +112,19 @@
             }
 
             .gameNamesTeams{
-                width: 100%;
+                flex: 2;
                 height: 100%;
                 display: flex;
                 align-items: center;
+                justify-content: flex-start;
+
+                @media (max-width: 1700px){
+                    flex: 3;
+                }
+                @media (max-width: 700px){
+                    width: 100%;
+                    flex: 6;
+                }
 
                 margin: 0 1rem;
 
