--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -222,6 +222,11 @@
                             z-index: 2;
 
                             object-fit: contain;
+
+                            @media (max-width: 600px){
+                                width: 78px;
+                                height: 78px;
+                            }
                         }
 
                         div{
