--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -263,7 +263,7 @@
 
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
 
         padding: 2rem 6.93rem;
 
