--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -43,6 +43,10 @@
                 margin-left: 1rem;
                 font-size: 20px;
                 font-weight: 300;
+
+                @media (max-width: 700px){
+                    font-size: 13px;
+                }
             }
         }
 
