--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -43,7 +43,7 @@
   .content{
     width: 100%;
     height: 100%;
-    padding: 50px 50px;
+    padding: 10px 50px 100px 50px;
 
     display: flex;
     justify-content: space-between;
