fix: fixing responsive image

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -65,7 +65,7 @@
 }
 
 .dark-mode:root{
-  --background-darkmode: transparent;
+  --background-darkmode: #EFF1FE;
   --background-header: #2865FF;
   --background-demo-home: rgba(37, 80, 255, 0.5);
   --background-button-icon: rgba(227, 227, 227, 0.5);
