--- a/src/components/BannerApresentation/banner.module.scss
+++ b/src/components/BannerApresentation/banner.module.scss
@@ -3,7 +3,7 @@
     height: 100%;
     border-radius: 20px;
 
-    padding: 1rem 2rem;
+    padding: 1rem 2rem 0 2rem;
 
     transition: width 0.2s, padding 0.2s;
 
