--- a/src/components/BannerApresentation/TableVertical/index.module.scss
+++ b/src/components/BannerApresentation/TableVertical/index.module.scss
@@ -105,7 +105,7 @@
 
     .contentCut{
         width: 5rem;
-        height: 12rem;
+        height: auto;
         display: flex;
         justify-content: space-around;
 
