--- a/src/components/BannerApresentation/banner.module.scss
+++ b/src/components/BannerApresentation/banner.module.scss
@@ -44,6 +44,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 0.5rem;
 
             div{
                 width: 52px;
