--- a/src/components/ApresentationHome/apresentation.module.scss
+++ b/src/components/ApresentationHome/apresentation.module.scss
@@ -61,6 +61,7 @@
             color: var(--black);
             margin-left: 1rem;
             font-family: 500;
+            margin-top: 0.8rem;
         }
 
         @media (max-width: 1200px){
