--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -3,7 +3,7 @@
     height: 70px;
     display: flex;
     align-items: center;
-    padding: 0 3.93rem;
+    padding: 0 41px;
 
     @media (max-width: 920px){
         padding: 0 10px;
