--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -22,7 +22,7 @@
         width: 100%;
         height: 100%;
 
-        padding: 0 6.93rem;
+        padding: 0 41px;
 
         display: flex;
         justify-content: space-between;
