--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -61,7 +61,7 @@
             height: 100%;
             background-color: transparent;
             border: none;
-            padding: 0.2rem 1rem;
+            padding: 0 1rem;
 
             display: flex;
             align-items: center;
