--- a/src/components/Main/GameSlider/index.module.scss
+++ b/src/components/Main/GameSlider/index.module.scss
@@ -21,19 +21,19 @@
         }
 
         .inLive{
-            width: 3rem;
-            height: 2rem;
+            width: 48.73px;
+            height: 25px;
             padding: 0 1rem;
 
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 10px;
+            border-radius: 5px;
 
             background-color: var(--red-1000);
 
             p{
-                margin-top: 0.8rem;
+                margin-top: 0.9rem;
             }
         }
 
@@ -44,7 +44,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-top: 2rem;
+            margin-top: 1.3rem;
 
             div{
                 width: 80px;
@@ -59,8 +59,8 @@
                 background: rgba(12, 78, 126, 0.4);
 
                 img{
-                    width: 85%;
-                    height: 85%;
+                    width: 64.11px;
+                    height: 64.11px;
                     object-fit: contain;
                 }
             }
@@ -77,6 +77,7 @@
             flex-direction: column;
 
             strong{
+                font-weight: 600;
                 margin-top: 1rem;
                 color: var(--white);
             }
