--- a/src/components/ApresentationHome/apresentation.module.scss
+++ b/src/components/ApresentationHome/apresentation.module.scss
@@ -2,7 +2,9 @@
     width: 100%;
     height: 100%;
 
-    margin-top: calc(150px - 80px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     @media (max-width: 1200px){
         display: flex;
@@ -72,7 +74,7 @@
     .links{
         height: 100%;
         display: flex;
-        align-items: center;
+        align-items: flex-end;
         justify-content: flex-start;
 
         a{
