--- a/src/components/Header/HeaderSecondary/index.module.scss
+++ b/src/components/Header/HeaderSecondary/index.module.scss
@@ -36,12 +36,15 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            padding: 1rem;
             .box{
                 height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
                 flex-direction: row;
+
+                padding: 0.5rem;
     
                 cursor: pointer;
     
@@ -59,9 +62,11 @@
                 }
     
                 &:hover{
-                    img{
-                        transform: scale(1.1);
-                    }
+                    transform: scale(1.04);
+                    -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+                    box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
+
+                    border-radius: 10px;
                 }
     
                 & + div{
