--- a/src/components/Main/GameSlider/index.module.scss
+++ b/src/components/Main/GameSlider/index.module.scss
@@ -2,6 +2,37 @@
     width: 100%;
     height: 100%;
 
+    .content{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        padding: 0 6px;
+
+        @media (max-width: 1009px){
+            display: none;
+        }
+    }
+
+    .contentMobile{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+
+        .carousel{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 0;
+        }
+
+        @media (min-width: 1009px){
+            display: none;
+        }
+    }
+
     .box{
         width: 100%;
         max-width: 237.55px;
