--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -12,6 +12,12 @@
     @media (max-width: 720px){
       background-image: url('/images/background_mobile_light.png');
     }
+
+    .content{
+      .apresentation{
+        padding: 4.3rem 1rem;
+      }
+    }
   }
 }
 
@@ -59,6 +65,12 @@
     }
     @media (max-width: 700px){
       padding: 10px 10px;
+    }
+
+    .apresentation{
+      width: 100%;
+      height: 100%;
+      padding: 3.5rem 1rem;
     }
 
     .banner{
