feat: adding component login and register

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,8 +17,15 @@
   --background-viewer-index-tipster: var(--white);
   --background-button-mobile: #082A3C;
 
+  --background-button-login: #003256;
+
   --background-line-header: var(--white); 
   --background-hover: rgba(0, 50, 86, 0.4);
+
+  --border-button-login: #0BACC6;
+
+  --color-facebook: var(--white);
+  --color-google: var(--white);
 
   --blue-50: rgba(0, 214, 243, 75);
   --blue-100: #0BACC6;
@@ -76,11 +83,20 @@
   --background-viewer-index-tipster: #EFF1FE;
   --background-button-mobile: #4071EC;
 
+  --background-button-login: #DBDBDB80;
+
   --background-line-header: rgba(220, 220, 220, 0.6); 
   --background-hover: #EFF1FE;
 
   --background-header-secondary: var(--white);
+
+  --border-button-login: #E8E8E8;
   --btn-login: #2865FF;
+
+  --blue-100: #2865FF;
+
+  --color-facebook: #2865FF;
+  --color-google: #EA4335;
 
   --red-800-transparent: rgba(237, 41, 57);
   --green-700-transparent: rgba(34, 210, 126);
