--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -13,6 +13,12 @@
             color: var(--light_select);
             padding: 0 1rem;
         }
+        div{
+            .ant-select-dropdown{
+                min-width: 20rem;
+                width: 20rem !important;
+            }
+        }
         .ant-select-arrow{
             color: var(--light_select-arrow);
         }
@@ -86,7 +92,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-
         }
 
         .right{
@@ -201,6 +206,11 @@
             border: none !important;
             color: var(--light_select);
             padding: 0 1rem;
+
+            .ant-select-dropdown{
+                min-width: 20rem;
+                width: 20rem !important;
+            }
         }
         .ant-select-arrow{
             color: var(--light_select);
