--- a/src/components/Main/GameSlider/index.module.scss
+++ b/src/components/Main/GameSlider/index.module.scss
@@ -40,6 +40,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
 
         padding: 1rem;
 
@@ -49,6 +50,14 @@
 
         & + div{
             margin-left: 1rem;
+        }
+
+        transition: transform 0.2s, box-shadow 0.2s;
+
+        &:hover{
+            transform: scale(1.01);
+            -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+            box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
         }
 
         .inLive{
