--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -70,8 +70,9 @@
             align-items: center;
             justify-content: space-between;
             background-color: var(--background-box-game);
+            cursor: pointer;
 
-            padding: 1rem 2rem;
+            padding: 0.2rem 2rem;
 
             margin-top: 1rem;
             border-radius: 10px;
@@ -85,6 +86,14 @@
             @media (max-width: 600px){
                 font-size: 70%;
                 padding: 1rem 0.5rem;
+            }
+
+            transition: transform 0.2s, box-shadow 0.2s;
+
+            &:hover{
+                transform: scale(1.01);
+                -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+                box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
             }
 
             .star{
