--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,7 @@
   --background-button-login: #003256;
 
   --background-line-header: var(--white); 
-  --background-hover: rgba(0, 50, 86, 0.4);
+  --background-hover: rgba(0, 50, 86);
 
   --border-button-login: #0BACC6;
 
