--- a/src/components/Main/Box/index.module.scss
+++ b/src/components/Main/Box/index.module.scss
@@ -31,7 +31,7 @@
     main{
         width: 100%;
         height: 100%;
-        padding: 0 1rem;
+        padding: 0 0.5rem;
 
         display: flex;
         flex-direction: column;
@@ -61,7 +61,9 @@
             height: 100%;
             background-color: transparent;
             border: none;
-            padding: 0 1rem;
+            padding: 0.4rem 0.5rem;
+
+            margin-top: 0.4rem;
 
             display: flex;
             align-items: center;
@@ -109,7 +111,7 @@
         }
 
         .viewMore{
-            padding: 0 1rem;
+            padding: 0 0.5rem;
             color: var(--blue-100);
 
             cursor: pointer;
