--- a/src/components/Main/TableGames/index.module.scss
+++ b/src/components/Main/TableGames/index.module.scss
@@ -2,6 +2,12 @@
     width: 100%;
     height: 100%;
 
+    :global{
+        .ant-progress-text{
+            max-width: 40px;
+        }
+    }
+
     button{
         width: 100%;
         height: 60px;
