--- a/src/components/User/Input/index.module.scss
+++ b/src/components/User/Input/index.module.scss
@@ -1,31 +1,132 @@
-.container{
+.socialContainer{
     width: 100%;
-    height: 65px;
-    background-color: var(--background-button-login);
-    color: var(--light);
-    border-radius: 10px;
-    margin-top: 1rem;
+    height: 100%;
+    .socials{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+        button{
+            width: 100%;
+            height: 65px;
+            
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
 
-    padding: 1rem;
+            padding: 0 2rem;
 
-    &::placeholder{
-        color: var(--light);
-        font-weight: 300;
-        font-size: 14px;
+            color: var(--light-100);
+            font-weight: 300;
+
+            background-color: var(--background-button-login);
+
+            border: 1px solid var(--border-button-login);
+            border-radius: 10px;
+
+            margin-top: 1rem;
+
+            & + button{
+                margin-left: 0.2rem;
+            }
+
+            transition: transform 0.2s, box-shadow 0.2s;
+
+            &:hover{
+                transform: scale(1.04);
+                -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+                box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
+            }
+        }
     }
 
-    input{
+    p{
+        text-align: center;
+        margin-top: 1rem;
+        a{
+            color: var(--blue-100);
+        }
+    }
+}
+
+.container{
+    width: 100%;
+    .title{
+        text-align: start;
+        font-weight: 300;
+        font-size: 18px;
+        color: var(--light);
+    
+        strong{
+            font-size: 20px;
+            text-align: start;
+            font-weight: bold;
+        }
+    }
+
+    .inputs{
+        width: 100%;
+        height: 65px;
         background-color: var(--background-button-login);
         color: var(--light);
-        margin-left: 1rem;
+        border-radius: 10px;
+        border: none;
+        margin-top: 1rem;
+        padding: 0 1rem;
+    
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    
+    
         &::placeholder{
             color: var(--light);
             font-weight: 300;
             font-size: 14px;
+        }
+    
+        .input{
+            height: 100%;
+            background-color: transparent;
+            border: none;
+            outline: none;
+
+            input{
+                height: 100%;
+                background-color: transparent;
+                color: var(--light);
+                margin-left: 1rem;
+                &::placeholder{
+                    color: var(--light);
+                    font-weight: 300;
+                    font-size: 14px;
+                }
+            }
+    
+        }
+    }
+    
+    
+    .buttonSubmit{
+        width: 100%;
+        height: 65px;
+    
+        margin-top: 2rem;
+    
+        background-color: #0BACC6;
+        border-radius: 10px;
+    
+        outline: none;
+        border: none;
+        color: var(--white);
+    
+        transition: transform 0.2s, box-shadow 0.2s;
+    
+        &:hover{
+            transform: scale(1.04);
+            -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+            box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
         }
     }
 }
