--- a/src/components/User/LoginRegister/index.module.scss
+++ b/src/components/User/LoginRegister/index.module.scss
@@ -36,6 +36,9 @@
             .form{
                 width: 100%;
                 height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
     
                 p{
                     font-weight: 300;
@@ -48,113 +51,57 @@
                 }
     
                 .copyright{
-                    margin-left: 103px;
                     margin-top: 3rem;
                     font-weight: 300;
                 }
-    
-                form{
+            
+                .socials{
                     width: 100%;
-                    height: 100%;
-    
-                    padding: 8px 100px 0px 153px;
-    
-                    label{
-                        width: 401px;
-                        height: 65px;
-                        background-color: var(--background-button-login);
-    
-                        display: flex;
-                        justify-content: space-between;
-                        align-items: center;
-    
-                        padding: 1rem;
-    
-                        border-radius: 10px;
-    
-                        input{
-                            width: 100%;
-                            height: 100%;
-                            border: none;
-                            outline: none;
-                            color: var(--white);
-                            margin-left: 1rem;
-                            &::placeholder{
-                                color: var(--white);
-                                font-weight: 300;
-                            }
-    
-                            background-color: transparent;
-                        }
-                    }
-    
-                    .buttonSubmit{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    padding: 10px 50px;
+
+                    button{
                         width: 100%;
                         height: 65px;
-    
-                        margin-top: 2rem;
-    
-                        background-color: #0BACC6;
+                        
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+
+                        padding: 0 2rem;
+
+                        color: var(--light-100);
+                        font-weight: 300;
+
+                        background-color: var(--background-button-login);
+
+                        border: 1px solid var(--border-button-login);
                         border-radius: 10px;
-    
-                        outline: none;
-                        border: none;
+
+                        margin-top: 1rem;
+
+                        & + button{
+                            margin-left: 0.2rem;
+                        }
 
                         transition: transform 0.2s, box-shadow 0.2s;
-    
+
                         &:hover{
                             transform: scale(1.04);
                             -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
                             box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
                         }
                     }
-    
-                    .socials{
-                        width: 100%;
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-    
-                        button{
-                            width: 100%;
-                            height: 65px;
-                            
-                            display: flex;
-                            align-items: center;
-                            justify-content: space-around;
-    
-                            padding: 0 2rem;
+                }
 
-                            color: var(--light-100);
-                            font-weight: 300;
-    
-                            background-color: var(--background-button-login);
-    
-                            border: 1px solid var(--border-button-login);
-                            border-radius: 10px;
-    
-                            margin-top: 1rem;
-    
-                            & + button{
-                                margin-left: 0.2rem;
-                            }
-
-                            transition: transform 0.2s, box-shadow 0.2s;
-    
-                            &:hover{
-                                transform: scale(1.04);
-                                -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
-                                box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
-                            }
-                        }
-                    }
-    
-                    p{
-                        text-align: center;
-                        margin-top: 1rem;
-                        a{
-                            color: var(--blue-100);
-                        }
+                p{
+                    text-align: center;
+                    margin-top: 1rem;
+                    a{
+                        color: var(--blue-100);
                     }
                 }
             }
