feat: adding icons and change image demo

--- a/src/components/Dropdown/index.module.scss
+++ b/src/components/Dropdown/index.module.scss
@@ -1,3 +1,11 @@
+:global(.dark-mode){
+    .container{
+        .content{
+            background-color: var(--white);
+        }
+    }
+}
+
 .container{
     width: auto;
     height: 2rem;
