--- a/src/components/Main/BoxGame/index.module.scss
+++ b/src/components/Main/BoxGame/index.module.scss
@@ -7,6 +7,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-direction: column;
         background-color: var(--background-box-game);
         cursor: pointer;
 
@@ -34,6 +35,15 @@
             box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
         }
 
+        .wrapper{
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
         .star{
             transition: color 0.2s;
             &:hover{
@@ -54,7 +64,7 @@
             margin: 0 1rem;
 
             p{
-                margin-top: 0.7rem;
+                margin-top: 1rem;
             }
 
             @media (max-width: 600px){
@@ -63,14 +73,13 @@
         }
 
         .gameNamesTeams{
-            flex: 2;
             height: 100%;
             display: flex;
             align-items: center;
             justify-content: flex-start;
 
             @media (max-width: 1700px){
-                flex: 3;
+                flex: 1.3;
             }
             @media (max-width: 700px){
                 width: 100%;
@@ -108,6 +117,10 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
+
+                @media (max-width: 720px){
+                    flex: 3;
+                }
 
                 div{
                     width: 100%;
@@ -218,6 +231,70 @@
                 &:hover{
                     filter: brightness(0.9);
                 }
+            }
+        }
+
+        .spaceDown{
+            width: 100%;
+            height: 100%;
+            flex: 1;
+
+            display: flex;
+            justify-content: center;
+
+            margin: 1rem 0;
+
+            @media (min-width: 862px){
+                display: none;
+            }
+
+            label{
+                width: 34px;
+                height: 34px;
+
+                cursor: pointer;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                background: linear-gradient(180deg, rgba(9, 157, 186, 0.2) 0%, rgba(4, 99, 139, 0.4) 100%);
+                box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+                backdrop-filter: blur(5px);
+                border-radius: 5px;
+
+                & + label{
+                    margin-left: 0.1rem;
+                }
+
+                transition: filter 0.2s;
+                &:hover{
+                    filter: brightness(0.9);
+                }
+            }
+        }
+
+        .buttonsDown{
+            width: 30px;
+            height: 30px;
+            border-radius: 5px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            border: none;
+
+            background-color: #012742;
+
+            &:hover{
+                transform: scale(1.01);
+                -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+                box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
+            }
+
+            @media (min-width: 862px){
+                display: none;
             }
         }
     }
