--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -19,6 +19,11 @@
         .contentBlur{
             width: 100%;
             height: 100%;
+
+            background-image: url('/images/background_game.jpg');
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
           }
 
         .box{
