--- a/src/components/User/LoginRegister/index.module.scss
+++ b/src/components/User/LoginRegister/index.module.scss
@@ -33,6 +33,21 @@
             justify-content: space-between;
             align-items: center;
 
+            .image{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+    
+                position: relative;
+                img{
+                    width: 20rem;
+                    height: 20rem;
+                    object-fit: contain;
+                }
+            }
+
             .form{
                 width: 100%;
                 height: 100%;
@@ -116,8 +131,8 @@
 
             position: relative;
             img{
-                width: 100%;
-                height: 100%;
+                width: 20rem;
+                height: 20rem;
                 object-fit: contain;
             }
         }
