--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -25,7 +25,7 @@
   width: 100%;
   height: 100%;
 
-  background-image: url('/images/background_light.png');
+  background-image: url('/images/background_light.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
