--- a/src/components/Main/index.module.scss
+++ b/src/components/Main/index.module.scss
@@ -1,3 +1,13 @@
+:global(.dark-mode){
+    .container{
+        .content{
+            .contentBlur{
+                background-image: none;
+            }
+        }
+    }
+}
+
 .container{
     width: 100%;
     height: 100%;
@@ -134,8 +144,11 @@
                             transition: background-color 0.2s;
     
                             &:hover{
-
-                                background-color: var(--background-header);
+                                transform: scale(1);
+                                -webkit-box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61); 
+                                box-shadow: 1px 12px 24px -5px rgba(0,0,0,0.61);
+            
+                                border-radius: 10px;
                             }
                         }
     
